Make WiFi Connect listen on port 45454

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     network_mode: "host"
     labels:
       io.resin.features.dbus: '1'
-  ssids:
+  web-app:
     build: ./web-app
     depends_on:
       - wifi-connect
