--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   wifi-connect:
     build: ./wifi-connect
     network_mode: "host"
+    privileged: true
     labels:
       io.resin.features.dbus: '1'
   web-app:
