Host network mode for the web-app container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,6 @@ services:
       io.resin.features.dbus: '1'
   web-app:
     build: ./web-app
+    network_mode: "host"
     depends_on:
       - wifi-connect
-    expose:
-      - "80"
