Pin WiFi Connect to v4.1.1

--- a/wifi-connect/Dockerfile.template
+++ b/wifi-connect/Dockerfile.template
@@ -7,9 +7,7 @@ RUN apt-get update \
 
 WORKDIR /usr/src/app
 
-RUN curl https://api.github.com/repos/resin-io/resin-wifi-connect/releases/latest -s \
-    | grep -hoP 'browser_download_url": "\K.*%%RESIN_ARCH%%\.tar\.gz' \
-    | xargs -n1 curl -Ls \
+RUN curl -Ls https://github.com/resin-io/resin-wifi-connect/releases/download/v4.1.1/wifi-connect-v4.1.1-linux-%%RESIN_ARCH%%.tar.gz \
     | tar -xvz -C /usr/src/app/
 
 COPY start.sh .
